# adelphos

./: .gitignore  CONTRIBUTING.md  Makefile  README.md
setup/: ad_schema.sql
site/: composer.json
site/assets/css/: styles.css
site/config/: bootstrap.php  container.php  defaults.php  functions.php  middleware.php  routes.php  settings.php
site/public/: index.php
site/src/Action/: AboutAction.php  DoPayAction.php  HomeAction.php  LoginAction.php  LoginDoAction.php  SummaryAction.php  UserDoRegisterAction.php  UserDoRegisterStepThreeAction.php  UserDoRegisterStepTwoAction.php  UserGotInviteAction.php  UserRegisterAction.php
site/src/Backend/: AdelphosBE.php
site/src/Common/: Constants.php
site/src/Data/: CurrencyCollection.php  CurrencyData.php  User.php  UserRegistrationData.php
site/templates/: hello.php  layout.html.php
site/templates/general/: about.html.php
src/: CMakeLists.txt  cmake_cache_proto.m4
src/cli/: CMakeLists.txt  cli.c  cli.h  main.c
src/common/: CMakeLists.txt  acrypt.h  alog.c  alog.h  colors.h  crypt.c  dbg.h  dbgpriv.h  hash.c  hash.h  jfsm.c  jfsm.h  jsmn.c  jsmn.h  jsmn_user.c  jsmn_user.h  misc.c  misc.h  strstream.c  strstream.h  trust.c  trust.h  units.c  units.h  vecptr.c  vecptr.h
src/daemon/: CMakeLists.txt  main.c  request.c  request.h
src/include/: adelphos_config.h.in
src/lib/: CMakeLists.txt  ad_authenticate.h  ad_errors.h  ad_object.h  addb.c  addb.h  adelphos.c  adelphos.h  auth_ml.h  cli_api.c  cli_api.h  json_api.c  json_api.h  security.h  trust_line.h
src/test/: CMakeLists.txt  main.c
(+16 files in other folders)
